Fix NowPlayingInfoArtwork operator== logic. https://bugs.webkit.org/show_bug.cgi?id=223730 <rdar://problem/75822687>

Patch by Jean-Yves Avenard <jya@apple.com> on 2021-03-26
Reviewed by Youenn Fablet.

Source/WebCore:

Gtest NowPlayingInfoArtworkTest added .

* platform/audio/NowPlayingInfo.h:
(WebCore::NowPlayingInfoArtwork::operator== const):
(WebCore::NowPlayingInfoArtwork::operator!= const):

Tools:

* TestWebKitAPI/CMakeLists.txt:
* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebCore/NowPlayingInfoTests.cpp: Added.
(TestWebKitAPI::testEmptyArtwork):
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/235799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275091 268f45cc-cd09-0410-ab3c-d52691b4dbfc